--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/SaahilChawande/blockchain/issues"
   },
-  "homepage": "https://github.com/SaahilChawande/blockchain#readme"
+  "homepage": "https://github.com/SaahilChawande/blockchain#readme",
+  "dependencies": {
+    "sha256": "^0.2.0"
+  }
 }
